--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import CyclingTracker from '../components/CyclingTracker.astro';
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Cycling Recovery Tracker">
+  <main style="background-color: grey; margin: 0; padding: 0;">
+    <CyclingTracker />
+  </main>
 </Layout>
